# codemind

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  README_SCRIPTS.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: flake8.yml
app/: ai_handler.py  arq_app.py  celery_app.py  cli.py  config.py  exceptions.py  github_client.py  github_webhook.py  log_config.py  main.py  reviewer.py  tasks.py
app/agents/: __init__.py  agent_context.py  base_agent.py  changelog_agent.py  logic_agent.py  result_aggregator.py  timeout_controller.py  unittest_agent.py
app/ai_handlers/: base_ai_handler.py  litellm_ai_handler.py
app/algo/: ast_analyzer.py  pr_processing.py  pr_router.py
app/git_providers/: git_provider.py  github_provider.py
app/prompts/: changelog_prompt.toml  performance_prompt.toml  reducer_prompt.toml  review_prompt.toml  security_prompt.toml  style_prompt.toml  unittest_prompt.toml
app/rag/: __init__.py  data_collector.py  document_parser.py  embedding_service.py  evaluation.py  knowledge_manager.py  prompts.py  retriever.py  vector_store.py
app/reviewers/: __init__.py  base_reviewer.py  changelog_reviewer.py  logic_reviewer.py  result_aggregator.py  reviewer_context.py  timeout_controller.py  unittest_reviewer.py
app/services/: ci_updater.py
app/tools/: pr_reviewer.py
data/chroma/: chroma.sqlite3
docs/: changing_a_model.md
scripts/: setup_github_webhook.sh  start_all.sh  status.sh  stop_all.sh
tests/: test_embedding_connectivity.py  test_rag_integration.py
tests/unittest/: test_ai_handler.py  test_ci_updater.py  test_github_webhook.py  test_pr_processing.py  test_pr_router.py  test_rag.py  test_reviewer.py  test_tasks.py
